Add setting for current search match color When incsearch is enabled, decorate the current match (i.e., the instance of the pattern that the cursor will move to when search is confirmed) with a new `searchMatch` decoration.
Color defaults to `editor.findMatch` theme color, and
can be customized through `vim.searchMatchColor` and `vim.searchMatchTextColor` configuration keys.

--- a/package.json
+++ b/package.json
@@ -504,6 +504,14 @@
           "type": "string",
           "description": "Color of the search highlight text."
         },
+        "vim.searchMatchColor": {
+          "type": "string",
+          "description": "Color of the current match."
+        },
+        "vim.searchMatchTextColor": {
+          "type": "string",
+          "description": "Color of the current match text."
+        },
         "vim.highlightedyank.enable": {
           "type": "boolean",
           "description": "Enable highlighting when yanking.",
