--- a/package.json
+++ b/package.json
@@ -497,20 +497,32 @@
           "default": "\\"
         },
         "vim.searchHighlightColor": {
-          "type": "string",
-          "description": "Color of the search highlight."
+          "type": [
+            "string",
+            "undefined"
+          ],
+          "description": "Background color of the other search matches. The color must not be opaque so as not to hide underlying decorations. Uses `editor.findMatchHighlightColor` from current theme if undefined."
         },
         "vim.searchHighlightTextColor": {
-          "type": "string",
-          "description": "Color of the search highlight text."
+          "type": [
+            "string",
+            "undefined"
+          ],
+          "description": "Foreground color of the other search matches."
         },
-        "vim.searchMatchColor": {
-          "type": "string",
-          "description": "Color of the current match."
+        "vim.searchMatchBackgroundColor": {
+          "type": [
+            "string",
+            "undefined"
+          ],
+          "description": "Background color of the current match. Uses `editor.findMatchColor` from current theme if undefined."
         },
-        "vim.searchMatchTextColor": {
-          "type": "string",
-          "description": "Color of the current match text."
+        "vim.searchMatchForegroundColor": {
+          "type": [
+            "string",
+            "undefined"
+          ],
+          "description": "Foreground color of the current match."
         },
         "vim.highlightedyank.enable": {
           "type": "boolean",
@@ -519,12 +531,12 @@
         },
         "vim.highlightedyank.color": {
           "type": "string",
-          "description": "Color of the yank highlight.",
+          "description": "Background color of yanked text. The color must not be opaque so as not to hide underlying decorations.",
           "default": "rgba(250, 240, 170, 0.5)"
         },
         "vim.highlightedyank.textColor": {
           "type": "string",
-          "description": "Color of the yank highlight text."
+          "description": "Foreground color of yanked text."
         },
         "vim.highlightedyank.duration": {
           "type": "number",
