--- a/package.json
+++ b/package.json
@@ -498,11 +498,11 @@
         },
         "vim.searchHighlightColor": {
           "type": "string",
-          "markdownDescription": "Background color of the other search matches. The color must not be opaque so as not to hide underlying decorations. Uses `#editor.findMatchHighlightColor#` from current theme if undefined."
+          "markdownDescription": "Background color of non-current search matches. The color must not be opaque so as not to hide underlying decorations. Uses `#editor.findMatchHighlightColor#` from current theme if undefined."
         },
         "vim.searchHighlightTextColor": {
           "type": "string",
-          "markdownDescription": "Foreground color of the other search matches."
+          "markdownDescription": "Foreground color of non-current search matches."
         },
         "vim.searchMatchColor": {
           "type": "string",
