Changed sneakMaxLines behaviour to start from 0
Now if the user wants to only search the current line he needs to set
sneakMaxLinesToConsider setting to 1 instead of 0. 0 means to search the
whole document.

--- a/package.json
+++ b/package.json
@@ -734,8 +734,9 @@
         },
         "vim.sneakMaxLinesToConsider": {
           "type": "number",
-          "description": "Maximum number of lines to search during Sneak search (useful when one works with large files). -1 means no restriction.",
-          "default": -1
+          "description": "Maximum number of lines to search during Sneak search (useful when one works with large files). 0 means no restriction. 1 would mean to only search the current line",
+          "default": 0,
+          "minimum": 0
         },
         "vim.sneakReplacesF": {
           "type": "boolean",
