--- a/package.json
+++ b/package.json
@@ -498,11 +498,19 @@
         },
         "vim.searchHighlightColor": {
           "type": "string",
-          "description": "Color of the search highlight."
+          "markdownDescription": "Background color of non-current search matches. The color must not be opaque so as not to hide underlying decorations. Uses `#editor.findMatchHighlightColor#` from current theme if undefined."
         },
         "vim.searchHighlightTextColor": {
           "type": "string",
-          "description": "Color of the search highlight text."
+          "markdownDescription": "Foreground color of non-current search matches."
+        },
+        "vim.searchMatchColor": {
+          "type": "string",
+          "markdownDescription": "Background color of the current match. Uses `#editor.findMatchColor#` from current theme if undefined."
+        },
+        "vim.searchMatchTextColor": {
+          "type": "string",
+          "markdownDescription": "Foreground color of the current match."
         },
         "vim.highlightedyank.enable": {
           "type": "boolean",
@@ -511,12 +519,12 @@
         },
         "vim.highlightedyank.color": {
           "type": "string",
-          "description": "Color of the yank highlight.",
+          "description": "Background color of yanked text. The color must not be opaque so as not to hide underlying decorations.",
           "default": "rgba(250, 240, 170, 0.5)"
         },
         "vim.highlightedyank.textColor": {
           "type": "string",
-          "description": "Color of the yank highlight text."
+          "description": "Foreground color of yanked text."
         },
         "vim.highlightedyank.duration": {
           "type": "number",
@@ -656,12 +664,12 @@
         "vim.easymotionIncSearchForegroundColor": {
           "type": "string",
           "default": "#7fbf00",
-          "description": "Set a custom color for the easymotion search n-character (default `<leader><leader>/`)."
+          "markdownDescription": "Set a custom color for the easymotion search n-character (default `<leader><leader>/`)."
         },
         "vim.easymotionDimColor": {
           "type": "string",
           "default": "#777777",
-          "description": "Set a custom color for the easymotion dimmed characters when `#vim.easymotionDimBackground#` is set to true."
+          "markdownDescription": "Set a custom color for the easymotion dimmed characters when `#vim.easymotionDimBackground#` is set to true."
         },
         "vim.easymotionMarkerWidthPerChar": {
           "type": "number",
