Fix prettier GitHub Action... maybe?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Checkout VSCodeVim
         uses: actions/checkout@v2
         with:
+          ref: ${{ github.head_ref }}
           # Get full history; needed for Prettier to amend commit
           fetch-depth: 0
 
