--- a/package.json
+++ b/package.json
@@ -797,7 +797,7 @@
         },
         "vim.inccommand": {
           "type": "string",
-          "markdownDescription": "Show the effects of a `substitute` command as you type.",
+          "markdownDescription": "Show the effects of the `:substitute` command as you type.",
           "default": "replace",
           "enum": [
             "",
