--- a/package.json
+++ b/package.json
@@ -1196,6 +1196,7 @@
     "@types/source-map-support": "0.5.6",
     "@types/vscode": "1.67.0",
     "@vscode/test-electron": "2.2.0",
+    "circular-dependency-plugin": "^5.2.2",
     "clean-webpack-plugin": "4.0.0",
     "event-stream": "4.0.1",
     "fork-ts-checker-webpack-plugin": "7.2.13",
