Fix extension for web
Co-authored-by: mustard-mh <mhqnwt@gmail.com>

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
       },
       {
         "command": "vim.editVimrc",
+        "enablement": "!isWeb",
         "title": "Vim: Edit .vimrc"
       }
     ],
