--- a/package.json
+++ b/package.json
@@ -310,6 +310,11 @@
         "when": "editorTextFocus && vim.active && vim.use<C-y> && !inDebugRepl"
       },
       {
+        "key": "ctrl+z",
+        "command": "extension.vim_ctrl+z",
+        "when": "editorTextFocus && vim.active && vim.use<C-z> && !inDebugRepl"
+      },
+      {
         "key": "ctrl+6",
         "command": "extension.vim_ctrl+6",
         "when": "editorTextFocus && vim.active && vim.use<C-6> && !inDebugRepl"
