feat(package.json): set default `<C-s>` option to false at vim.handleKeys

--- a/package.json
+++ b/package.json
@@ -865,7 +865,8 @@
           "type": "object",
           "description": "Delegate certain key combinations back to VSCode to be handled natively.",
           "default": {
-            "<C-d>": true
+            "<C-d>": true,
+            "<C-s>": false
           }
         },
         "vim.statusBarColorControl": {
