feat(package.json): set default `<C-z>` value to false at vim.handleKeys

--- a/package.json
+++ b/package.json
@@ -876,7 +876,8 @@
           "description": "Delegate certain key combinations back to VSCode to be handled natively.",
           "default": {
             "<C-d>": true,
-            "<C-s>": false
+            "<C-s>": false,
+            "<C-z>": false
           }
         },
         "vim.statusBarColorControl": {
