--- a/package.json
+++ b/package.json
@@ -1186,7 +1186,8 @@
     "vscode:prepublish": "gulp build",
     "build": "gulp build",
     "test": "node ./out/test/runTest.js",
-    "forceprettier": "gulp forceprettier"
+    "forceprettier": "gulp forceprettier",
+    "watch": "npx webpack -c webpack.dev.js --watch"
   },
   "dependencies": {
     "diff-match-patch": "1.0.5",
