--- a/package.json
+++ b/package.json
@@ -705,6 +705,11 @@
           "description": "Regex matches for JumpToAnywhere motion.",
           "default": "\\b[A-Za-z0-9]|[A-Za-z0-9]\\b|_.|#.|[a-z][A-Z]"
         },
+        "vim.easymotionChinesePhonetic": {
+          "type": "object",
+          "description": "Setting for Chinese Phonetic motion.",
+          "default": "noPunctuation: false, onlyChinese: false, traditional: false, mixed: false"
+        },
         "vim.replaceWithRegister": {
           "type": "boolean",
           "markdownDescription": "Enable the [ReplaceWithRegister](https://github.com/vim-scripts/ReplaceWithRegister) plugin for Vim.",
@@ -1175,6 +1180,7 @@
     "os-browserify": "0.3.0",
     "parsimmon": "^1.18.0",
     "path-browserify": "1.0.1",
+    "pinyinlib": "^0.0.2",
     "process": "0.11.10",
     "queue": "^6.0.2",
     "source-map-support": "0.5.21",
