When searching for a vimrc path, first look for ~/.vscodevimrc (#8118)

--- a/package.json
+++ b/package.json
@@ -964,7 +964,7 @@
         },
         "vim.vimrc.path": {
           "type": "string",
-          "markdownDescription": "Path to a Vim configuration file. If unset, it will check for `$HOME/.vimrc`, `$HOME/_vimrc`, and `$HOME/.config/nvim/init.vim`, in that order."
+          "markdownDescription": "Path to a Vim configuration file. If unset, it will check for `$HOME/.vscodevimrc`, `$HOME/.vimrc`, `$HOME/_vimrc`, and `$HOME/.config/nvim/init.vim`, in that order."
         },
         "vim.substituteGlobalFlag": {
           "type": "boolean",
