Enable `isolatedModules` in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     },
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "isolatedModules": true
   },
   "exclude": ["node_modules", "!node_modules/@types"]
 }
