--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         run: yarn prettier:check
 
       - name: Lint
-        run: npx tslint -c tslint.json -p tsconfig.json
+        run: yarn lint
 
       - name: Build
         run: gulp webpack
