Get rid of unnecessary `npx` invocation

--- a/package.json
+++ b/package.json
@@ -1140,11 +1140,11 @@
     "build-dev": "gulp build-dev",
     "build-test": "gulp prepare-test",
     "test": "node ./out/test/runTest.js",
-    "lint": "npx tslint --project .",
-    "lint:fix": "npx tslint --project . --fix",
-    "prettier": "npx prettier --write .",
-    "prettier:check": "npx prettier --check .",
-    "watch": "npx webpack -c webpack.dev.js --watch",
+    "lint": "tslint --project .",
+    "lint:fix": "tslint --project . --fix",
+    "prettier": "prettier --write .",
+    "prettier:check": "prettier --check .",
+    "watch": "webpack -c webpack.dev.js --watch",
     "package": "yarn run vsce package --yarn --allow-star-activation",
     "prepare": "husky install"
   },
