--- a/package.json
+++ b/package.json
@@ -641,6 +641,11 @@
           "markdownDescription": "Set to consider case sensitive in search patterns",
           "default": false
         },
+        "vim.leapBidirectionalSearch": {
+          "type": "boolean",
+          "markdownDescription": "Set to bidirectional search",
+          "default": false
+        },
         "vim.easymotion": {
           "type": "boolean",
           "markdownDescription": "Enable the [EasyMotion](https://github.com/easymotion/vim-easymotion) plugin for Vim.",
@@ -1210,6 +1215,7 @@
     "ts-loader": "9.4.2",
     "tslint": "6.1.3",
     "typescript": "4.9.5",
+    "vitest": "^0.29.2",
     "vsce": "2.15.0",
     "webpack": "5.76.0",
     "webpack-cli": "5.0.1",
