--- a/package.json
+++ b/package.json
@@ -760,10 +760,10 @@
           "markdownDescription": "Enable the [Surround](https://github.com/tpope/vim-surround) plugin for Vim.",
           "default": true
         },
-        "vim.disableDefaultPluginMappings": {
+        "vim.enableDefaultPluginMappings": {
           "type": "boolean",
           "markdownDescription": "For users of custom keyboard layouts. Disable default keymappings starting with c/d/y. At present only affects surround.",
-          "default": false
+          "default": true
         },
         "vim.argumentObjectSeparators": {
           "type": "array",
