Fix tab keybinding from blocking Find menu tab-navigation
fixes #7000

--- a/package.json
+++ b/package.json
@@ -112,12 +112,12 @@
       {
         "key": "tab",
         "command": "extension.vim_tab",
-        "when": "editorFocus && vim.active && vim.mode != 'Insert' && !inDebugRepl"
+        "when": "editorTextFocus && vim.active && vim.mode != 'Insert' && !inDebugRepl"
       },
       {
         "key": "shift+tab",
         "command": "extension.vim_shift+tab",
-        "when": "editorFocus && vim.active && vim.mode != 'Insert' && !inDebugRepl"
+        "when": "editorTextFocus && vim.active && vim.mode != 'Insert' && !inDebugRepl"
       },
       {
         "key": "left",
