Replace the '*' activation point to 'onStartupFinished', which is generally recommended for VSCode's start-up performance

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "sideEffects": false,
   "activationEvents": [
-    "*",
+    "onStartupFinished",
     "onCommand:type"
   ],
   "qna": "https://vscodevim.herokuapp.com/",
